RESOLVED FIXED172512
CoreAudioCaptureSource is ducking system sound
https://bugs.webkit.org/show_bug.cgi?id=172512
Summary CoreAudioCaptureSource is ducking system sound
youenn fablet
Reported 2017-05-23 11:11:29 PDT
This happens on some Macs
Attachments
Patch (1.54 KB, patch)
2017-05-23 11:13 PDT, youenn fablet
no flags
Patch (2.69 KB, patch)
2017-05-23 16:12 PDT, youenn fablet
no flags
Patch (19.03 KB, patch)
2017-05-23 16:34 PDT, youenn fablet
no flags
Patch (2.95 KB, patch)
2017-05-23 16:54 PDT, youenn fablet
no flags
Patch (3.00 KB, patch)
2017-05-23 17:02 PDT, youenn fablet
no flags
Patch (3.50 KB, patch)
2017-05-23 17:28 PDT, youenn fablet
no flags
Patch (3.21 KB, patch)
2017-05-23 20:00 PDT, youenn fablet
no flags
Patch (3.28 KB, patch)
2017-05-23 20:44 PDT, youenn fablet
no flags
Patch (3.53 KB, patch)
2017-05-23 20:55 PDT, youenn fablet
no flags
Patch (3.54 KB, patch)
2017-05-23 21:12 PDT, youenn fablet
no flags
Patch (3.34 KB, patch)
2017-05-23 21:34 PDT, youenn fablet
no flags
Adding CoreAudio as framework for ios-sim as well (6.09 KB, patch)
2017-05-24 08:32 PDT, youenn fablet
no flags
Patch (11.01 KB, patch)
2017-05-24 10:30 PDT, youenn fablet
no flags
Patch (11.21 KB, patch)
2017-05-24 10:58 PDT, youenn fablet
no flags
Patch (11.25 KB, patch)
2017-05-24 11:11 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-05-23 11:13:23 PDT
youenn fablet
Comment 2 2017-05-23 16:12:06 PDT
Build Bot
Comment 3 2017-05-23 16:14:05 PDT
Attachment 311071 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:50: *SoftLink.h header should be included after all other headers. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 4 2017-05-23 16:34:14 PDT
Build Bot
Comment 5 2017-05-23 16:40:08 PDT
Attachment 311073 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:53: *SoftLink.h header should be included after all other headers. [build/include_order] [4] Total errors found: 1 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 6 2017-05-23 16:54:01 PDT
Build Bot
Comment 7 2017-05-23 16:55:10 PDT
Attachment 311076 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:53: *SoftLink.h header should be included after all other headers. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 8 2017-05-23 17:02:55 PDT
Build Bot
Comment 9 2017-05-23 17:05:34 PDT
Attachment 311079 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:53: *SoftLink.h header should be included after all other headers. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 10 2017-05-23 17:28:06 PDT
Build Bot
Comment 11 2017-05-23 17:29:57 PDT
Attachment 311084 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:54: *SoftLink.h header should be included after all other headers. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 12 2017-05-23 20:00:32 PDT
youenn fablet
Comment 13 2017-05-23 20:44:37 PDT
youenn fablet
Comment 14 2017-05-23 20:55:06 PDT
youenn fablet
Comment 15 2017-05-23 21:12:42 PDT
youenn fablet
Comment 16 2017-05-23 21:34:00 PDT
youenn fablet
Comment 17 2017-05-23 22:16:17 PDT
Radar WebKit Bug Importer
Comment 18 2017-05-23 22:16:45 PDT
WebKit Commit Bot
Comment 19 2017-05-23 22:39:26 PDT
Comment on attachment 311098 [details] Patch Clearing flags on attachment: 311098 Committed r217319: <http://trac.webkit.org/changeset/217319>
WebKit Commit Bot
Comment 20 2017-05-23 22:39:27 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 21 2017-05-24 03:45:14 PDT
Re-opened since this is blocked by bug 172538
youenn fablet
Comment 22 2017-05-24 08:32:50 PDT
Created attachment 311120 [details] Adding CoreAudio as framework for ios-sim as well
youenn fablet
Comment 23 2017-05-24 10:30:31 PDT
youenn fablet
Comment 24 2017-05-24 10:58:06 PDT
youenn fablet
Comment 25 2017-05-24 11:11:03 PDT
WebKit Commit Bot
Comment 26 2017-05-24 11:56:53 PDT
Comment on attachment 311135 [details] Patch Clearing flags on attachment: 311135 Committed r217381: <http://trac.webkit.org/changeset/217381>
WebKit Commit Bot
Comment 27 2017-05-24 11:56:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.