CoreAudioCaptureSource is ducking system sound https://bugs.webkit.org/show_bug.cgi?id=172512

Reviewed by Youenn Fablet.

Manual testing.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioSharedUnit::setupAudioUnit):
(WebCore::CoreAudioSharedUnit::defaultOutputDevice):


Canonical link: https://commits.webkit.org/189439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217319 268f45cc-cd09-0410-ab3c-d52691b4dbfc